[project]
name = "oop-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim_ka",email = "miheevm332@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "lint (>=1.2.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
line-length = 119


[tool.black]
line-length = 119
exclude = '.git'


[tool.mypy]
disallow_any_unimported = true
warn_return_any = true
exclude = 'venv'